Assignment 27 CSS completed!

--- a/bloccit/app/views/welcome/about.html.erb
+++ b/bloccit/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
 <h1>About Bloccit</h1>
  <p>Created by: Me</p>
+ 
+ <button class="social-btn"><%= link_to "Follow me", "http://www,espn.com" %></button>
