--- a/bloccit/app/views/layouts/application.html.erb
+++ b/bloccit/app/views/layouts/application.html.erb
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Bloccit</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <div class="container">
+ <html>
+ <head>
+   <title>Bloccit</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+   <%= csrf_meta_tags %>
+ </head>
+ <body>
+   <div class="container">
      <ul class="nav nav-tabs">
        <li><%= link_to "Bloccit", root_path %></li>
+       <li><%= link_to "Topics", topics_path %></li>
        <li><%= link_to "About", about_path %></li>
-     </ul>
      
      <% if flash[:notice] %>
        <div class="alert alert-success">
