--- a/bloccit/app/assets/stylesheets/application.scss
+++ b/bloccit/app/assets/stylesheets/application.scss
@@ -14,4 +14,11 @@
  *= require_self
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ user-info {
+   margin-top: 9px;
+ }
+ 
+ .nav {
+   margin-top: 5px;
+ }
  */
