--- a/bloccit/app/views/welcome/index.html.erb
+++ b/bloccit/app/views/welcome/index.html.erb
@@ -3,6 +3,7 @@
    <h1>Bloccit</h1>
    <p>Bloccit is a resource for sharing links with your friends!</p>
    <p>
+    <%= link_to "Sign In", new_session_path %> or
      <%= link_to "Sign Up", new_user_path, class: 'btn btn-primary' %> today!
    </p>
  </div>
@@ -20,4 +21,4 @@
      <h2>Makes you better looking</h2>
      <p>Bloccit will make you better looking: it's scientifically proven to make men look like Ryan Gosling and women look like Shakira.</p>
    </div>
- </div>
+ </div> 
