--- a/bloccit/app/assets/stylesheets/application.scss
+++ b/bloccit/app/assets/stylesheets/application.scss
@@ -1,2 +1,12 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+.user-info {
+  margin-top: 5px;
+  margin-right: 5px;
+  display: inline-block;
+}
+
+.nav {
+  margin-top: 5px;
+}
