--- a/bloccit/app/views/posts/show.html.erb
+++ b/bloccit/app/views/posts/show.html.erb
@@ -4,15 +4,15 @@
      submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
    </small>
  </h1>
- 
+
  <div class="row">
    <div class="col-md-8">
      <p><%= @post.body %></p>
    </div>
    <div class="col-md-4">
    <% if user_is_authorized_for_post?(@post) %>
-       <%= link_to "Edit Post", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
-       <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
-     <% end %>>
+       <%= link_to "Edit Post", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' if user_is_authorized_for_posts?(@post) %>
+       <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } if current_user == @post.user || current_user.admin? %>
+     <% end %>
    </div>
  </div>
