--- a/bloccit/app/views/topics/show.html.erb
+++ b/bloccit/app/views/topics/show.html.erb
@@ -4,14 +4,13 @@
    <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
    <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
  <% end %>
- 
- <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
- <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
- 
+
+ <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' if user_is_authorized_for_topics? %>
+ <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } if user_is_authorized_for_topics? %>
+
  <div class="row">
    <div class="col-md-8">
      <p class="lead"><%= @topic.description %></p>
- // #10
      <% @topic.posts.each do |post| %>
        <div class="media">
          <div class="media-body">
