--- a/bloccit/app/views/posts/_form.html.erb
+++ b/bloccit/app/views/posts/_form.html.erb
@@ -17,6 +17,15 @@
      <%= f.label :body %>
      <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
    <% end %>
+   
+   <div class="form-group">
+     <%= render partial: 'labels/form', locals: { f: f, topic: @topic, labels: @post.labels } %>
+   </div>
+
+   <div class="form-group">
+     <%= render partial: 'ratings/form', locals: { f: f, r: @post.rating } %>
+   </div>
+   
    <div class="form-group">
      <%= f.submit "Save", class: 'btn btn-success' %>
    </div>
