--- a/bloccit/app/views/posts/show.html.erb
+++ b/bloccit/app/views/posts/show.html.erb
@@ -1,9 +1,12 @@
-<h1>
-   <%= @post.title %> <%= render partial: "ratings/display", locals: { r: @post.rating } %><br>
-   <small>
-     submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
-   </small>
- </h1>
+<div>
+   <%= render partial: 'votes/voter', locals: { post: @post } %>
+   <h1>
+     <%= @post.title %> <br>
+     <small>
+       submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
+     </small>
+   </h1>
+</div>
  
  <div class="row">
     <div class="col-md-8">
@@ -27,10 +30,22 @@
      <% end %>
      
    </div>
-   <div class="col-md-4">
    <% if user_is_authorized_for_post?(@post) %>
+   <div class="col-md-4">
        <%= link_to "Edit Post", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' if user_is_authorized_for_posts?(@post) %>
        <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } if current_user == @post.user || current_user.admin? %>
+   </div>
      <% end %>
+   <div class="col-md-4">
+     <h3>
+ 
+       <%= pluralize(@post.points, 'point') %>
+       <div>
+         <small>
+           <%= pluralize(@post.up_votes, 'up vote') %>,
+           <%= pluralize(@post.down_votes, 'down vote') %>
+         </small>
+       </div>
+     </h3>
    </div>
  </div>
