--- a/bloccit/app/views/posts/show.html.erb
+++ b/bloccit/app/views/posts/show.html.erb
@@ -47,5 +47,8 @@
          </small>
        </div>
      </h3>
+     <% if current_user %>
+       <%= render partial: 'favorites/favorite', locals: { post: @post } %>
+     <% end %>
    </div>
  </div>
