Checkpoint 47 AJAX completed

--- a/bloccit/app/views/layouts/application.html.erb
+++ b/bloccit/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
      </div>
      
      </ul>
+    <div class="flash">
      
      <% if flash[:notice] %>
        <div class="alert alert-success">
@@ -44,6 +45,7 @@
          <%= flash[:alert] %>
        </div>
      <% end %>
+   </div>
 
     <%= yield %>
   </div>
